--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -16,7 +16,8 @@
         android:layout_marginStart="@dimen/dp_2"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginEnd="@dimen/dp_2"
-        android:layout_marginBottom="@dimen/dp_10">
+        android:layout_marginBottom="@dimen/dp_10"
+        android:onClick="@{vm::itemClick}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
