--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -29,7 +29,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:setImageBitmap='@{vm.mVideo.thumbImage}' />
+                app:setImageBitmap="@{vm.mVideo.imageBitmap}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
