Create worker class for download images

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -9,7 +9,7 @@
     </debug-overrides>
 
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">live.chartboost.com</domain>
+        <domain includeSubdomains="true">storage.googleapis.com</domain>
     </domain-config>
 
 </network-security-config>
