Store data in external storage

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -24,5 +24,11 @@
     <external-path
         name="external_storage_root"
         path="." />
+    <external-files-path
+        name="tvPlayer"
+        path="Image/" />
+    <external-files-path
+        name="tvPlayer"
+        path="Video/" />
 
 </paths>
