--- a/app/src/main/res/layout/activity_exo_player.xml
+++ b/app/src/main/res/layout/activity_exo_player.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:setImageBitmap='@{repository.mModel.imageBitmap}' />
+                app:setImageUri='@{repository.imageUri}' />
 
         </ViewFlipper>
 
